--- a/index.html
+++ b/index.html
@@ -17,4 +17,6 @@
 <link rel="icon" href="icon.svg">
 <link rel="help" href="README.md">
 
-<h1>...</h1>
+<h1>
+  <a href="https://github.com/webmural/diy"><code>...</code></a>
+</h1>
